css/style.css
.hero {
    display: flex;
  justify-content: center;
  align-items: center;
  gap: 40px;
  background-color: rgb(16, 30, 45);
  color: white;
}

.nav-bar {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 570px;
  background-color: rgba(16,30,45);
  color: white;
}

.nav-links {
  display: flex;
  justify-content: space-between;
  gap: 40px;
  list-style: none;
}

.nav-links a {
  color: white;
  font-weight: bold;
}

.logo {
  color: white;
  font-weight: bold;
}

.hero {
  padding-top: 100px;
}

.hero-text {
  display: flex;
  flex-direction: column;
  max-width: 400px;
}

.hero-text h1 {
  font-size: 48px;
  font-weight: 900;
  width: 350px;
  margin: 0;
}

.hero-text p {
  font-size: 18px;
  margin: 0;
}

.hero-text button {
  background-color: rgb(60, 123, 231);
  color: white;
  border: none;
  border-radius: 8px;
  display: inline-block;
  width: 100px;
  padding: 8px 12px; 
  margin-top: 10px;
}

.placeholder {
  width: 500px;
  height: 200px;
  background-color: gray;
  border: 1px solid #aaa;
  display: flex;
  justify-content:center;
  align-items: center;
}

.info {
  display: flex;
flex-direction: column;
align-items: center;
}

.info-cards {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  text-align: center;
}

.info-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.info-box {
  width: 150px;
  height: 150px;
  border: 3px solid #3882f6;
  border-radius: 10px;
}

